# whaibot

./: .dockerignore  .gitignore  Dockerfile  app.py  chains.py  docker-compose.yml  evolution_api.py  hello.py  memory.py  prompts.py  pyproject.toml  requirements.txt  settings.py  vectorstore.py
core/: chains.py  evolution_api.py  memory.py  prompts.py  settings.py  vectorstore.py
