[project]
name = "whaibot"
version = "0.1.0"
description = "A WhatsApp bot using LangChain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.12",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "redis>=5.2.1",
    "langchain-groq>=0.3.2",
    "sentence-transformers>=2.6.0",
    "langchain-huggingface>=0.0.5",
]
